# OmegaProject

./: .gitignore  Makefile  app.py  docker-compose.yaml  pyproject.toml  requirements.txt  settings.py  utils.py
auth/: auth.py  utils.py
database/: database.py  schema.py
static/: error.css  signup.css  styles.css
static/javascript/: index.js
templates/: error.html  index.html  login.html  signup.html
